--- a/src/components/AddressInputBox/AddressInputBox.css
+++ b/src/components/AddressInputBox/AddressInputBox.css
@@ -1,6 +1,6 @@
 .address-input-box {
   position: fixed;
-  top: 55%; 
+  top: 45%; 
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
@@ -40,7 +40,7 @@ input[type="text"]::placeholder {
 .clear-btn {
   position: absolute;
   right: 10px;
-  top: 45%;
+  top: 50%;
   transform: translateY(-50%);
   background-color: red; /* Red background for the circle */
   color: #fff; /* White 'x' color */
@@ -68,6 +68,7 @@ input[type="text"]::placeholder {
 }
 
 button[type="submit"] {
+  position: relative;
   padding: 12px 15px;
   margin-top: 10px; 
   background-color: #007bff;
@@ -82,6 +83,10 @@ button[type="submit"]:hover {
   background-color: #0056b3;
 }
 
+button[type="submit"]:disabled {
+  cursor: not-allowed;
+}
+
 .close-btn {
   align-self: flex-end;
   background: none;
@@ -92,20 +97,4 @@ button[type="submit"]:hover {
 
 .close-btn:hover {
   color: #ff0000;
-}
-
-.routes-section {
-  margin-top: 20px;
-}
-
-.routes-section ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.routes-section li {
-  margin-bottom: 10px;
-  padding: 10px;
-  background-color: #f7f7f7;
-  border-radius: 4px;
 }
